--- a/pcgrr/vignettes/CHANGELOG.Rmd
+++ b/pcgrr/vignettes/CHANGELOG.Rmd
@@ -1,7 +1,9 @@
+---
+title: "Changelog"
+output: rmarkdown::html_document
+---
 
-## CHANGELOG
-
-#### x.x.x - January 28th 2022
+## x.x.x - February 2022
 
 * Data updates: ClinVar, GWAS catalog, GENCODE, CIViC, CancerMine, KEGG, ChEMBL, Open Targets Platform, Disease Ontology, Experimental Factor Ontology
 
@@ -19,7 +21,7 @@
 
 * VCF validation step. Feedback from users suggested that Ensembl's `vcf-validator` was often too stringent so its use has been deprecated. The `--no_vcf_validate` option remains for backwards compatibility.
 
-#### 0.9.2 - June 30th 2021
+## 0.9.2 - June 30th 2021
 
 * Data updates: ClinVar, GWAS catalog, CIViC, CancerMine, dbNSFP, KEGG, ChEMBL, Disease Ontology/EFO, Open Targets Platform, UniProt KB, GENCODE
 * Software upgrades: R v4.1, Bioconductor v3.13, VEP (104) ++
@@ -83,7 +85,7 @@
  * Command-line options
     * `--conf` - TOML-based configuration file
 
-#### 0.9.1 - November 30th 2020
+## 0.9.1 - November 30th 2020
  * Data updates: ClinVar, GWAS catalog, CIViC, CancerMine, dbNSFP, KEGG, ChEMBL/DGIdb, Disease Ontology, Experimental Factor Ontology
 
 ##### Added
@@ -139,12 +141,12 @@
  * Detailed documentation of report contents are added to the Documentation section
  * References are updated and all provided with DOI
 
-#### 0.8.4 - November 18th 2019
+## 0.8.4 - November 18th 2019
 
 - Data updates: ClinVar, CIViC, CancerMine, UniProt KB
 - Software updates: VEP 98.3
 
-#### 0.8.3 - October 14th 2019
+## 0.8.3 - October 14th 2019
 
 - Data updates: ClinVar, GWAS catalog, GENCODE, CIViC, CancerMine
 - Software updates: VEP 98.2, vcf2tsv
@@ -159,7 +161,7 @@
  * Option _target_size_mb_ in pcgr.py replaces _target_size_mb_ in configuration file, more convenient in terms of configuring runs
  * Option _tumor_type_ in pcgr.py replaces _tumor_type_ in configuration file
 
-#### 0.8.2 - Sep 29th 2019
+## 0.8.2 - Sep 29th 2019
 
 - Data updates: ClinVar, GWAS catalog, GENCODE, DiseaseOntology, CIViC, CancerMine, UniProt KB
 - Software updates: VEP 97.3, vcfanno [0.3.2](https://github.com/brentp/vcfanno/releases/tag/v0.3.2), LOFTEE (VEP plugin) [1.0.3](https://github.com/konradjk/loftee/releases)
@@ -177,12 +179,12 @@
  * Capturing allelic depth (t_depth, t_ref_count etc.) in vcf2maf output (enhancement [#52](https://github.com/sigven/pcgr/issues/52))
  * Option _tumor_only_ in pcgr.py, replaces _vcf_tumor_only_ in configuration file, more convenient in terms of configuration
 
-#### 0.8.1 - May 22nd 2019
+## 0.8.1 - May 22nd 2019
 
 ##### Added
   * *Cancer_NOS.toml* as configuration file for unspecified tumor types
 
-#### 0.8.0 - May 20th 2019
+## 0.8.0 - May 20th 2019
 
 ##### Fixed
  * Bug in value box for Tier 2 variants (new line carriage) [Issue #73](https://github.com/sigven/pcgr/issues/73)
@@ -239,7 +241,7 @@
  * Original tier model 'pcgr'
 
 
-#### 0.7.0 - Nov 27th 2018
+## 0.7.0 - Nov 27th 2018
 
 ##### Fixed
  * Bug in assignment of variants to tier1/tier2 [Issue #61](https://github.com/sigven/pcgr/issues/61)
@@ -279,13 +281,13 @@
  * Moved from [TSGene 2.0](https://bioinfo.uth.edu/TSGene/) to [CancerMine](https://zenodo.org/record/1336650#.W9QMdRMzaL4) for annotation of tumor suppressor genes and proto-oncogenes
 	 * A minimum of n=3 citations were required to include literatured-mined tumor suppressor genes and proto-oncogenes from CancerMine
 
-#### 0.6.2.1 - May 14th 2018
+## 0.6.2.1 - May 14th 2018
 
 ##### Fixed
 
  * Bug in copy number annotation (broad/focal)
 
-#### 0.6.2 - May 9th 2018
+## 0.6.2 - May 9th 2018
 
 ##### Fixed
  * Bug in copy number segment display (missing variable initalization, [Issue #34](https://github.com/sigven/pcgr/issues/34)))
@@ -302,7 +304,7 @@
  * Issue warning for copy number segment that goes beyond chromosomal lengths of specified assembly (segments will be skipped)
  * Added missing subtypes for 'Skin_Cancer_NOS' in the cancer phenotype dataset
 
-#### 0.6.1 - May 2nd 2018
+## 0.6.1 - May 2nd 2018
 
 ##### Fixed
  * Bug in tier assignment 'pcgr_acmg' (case for no variants in tier1,2,3)
@@ -310,7 +312,7 @@
  * Bug: duplicated variants in 'Tier 3' resulting from genes encoded with dual roles as tumor suppressor genes/oncogenes
  * Bug: duplicated variants in 'Tier 1/Noncoding variants' resulting from rare cases of noncoding variants occurring in Tier 1 (synonymous variants with biomarker role)
 
-#### 0.6.0 - April 25th 2018
+## 0.6.0 - April 25th 2018
 
 ##### Added
  * New argument in pcgr.py
@@ -321,11 +323,11 @@
 	  * *Settings and annotation sources* - now also listing key PCGR configuration settings
 	  * *Main findings* - Six value boxes indicating the main findings of clinical relevance
  * New configuration options
-	 * \[tier_model\](string) - choice between *pcgr_acmg* and *pcgr*
-	 * \[mutational_burden\] - set TMB tertile limits
+	 * __tier_model__(string) - choice between *pcgr_acmg* and *pcgr*
+	 * __mutational_burden__ - set TMB tertile limits
 		 * *tmb_low_limit (float)*
 		 * *tmb_intermediate_limit (float)*
-	 * \[tumor_type\] - choose between 34 tumor types/classes:
+	 * __tumor_type__ - choose between 34 tumor types/classes:
 		 * *Adrenal_Gland_Cancer_NOS (logical)*
 		 * *Ampullary_Carcinoma_NOS (logical)*
 		 * *Biliary_Tract_Cancer_NOS (logical)*
@@ -360,19 +362,19 @@
 		 * *Thyroid_Cancer_NOS (logical)*
 		 * *Uterine_Cancer_NOS (logical)*
 		 * *Vulvar_Vaginal_Cancer_NOS (logical)*
-	 * \[mutational_signatures\]
+	 * __mutational_signatures__
 	    * *mutsignatures_cutoff (float)* - discard any signature contributions with a weight less than the cutoff
-	 * \[cna\]
+	 * __cna__
 	    * *transcript_cna_overlap (float)* - minimum percent overlap between copy number segment and transcripts (average) for tumor suppressor gene/proto-oncogene to be reported
-	 * \[allelic_support\]
+	 * __allelic_support__
 		 * If input VCF has correctly formatted depth/allelic fraction as INFO tags, users can add thresholds on depth/support that are applied prior to report generation
 			 * *tumor_dp_min (integer)* - minimum sequencing depth for variant in tumor sample
 			 * *tumor_af_min (float)* - minimum allelic fraction for variant in tumor sample
 			 * *normal_dp_min (integer)* - minimum sequencing depth for variant in normal sample
 			 * *normal_af_max (float)* - maximum allelic fraction for variant in normal sample
-	 * \[visual\]
+	 * __visual__
 	     * *report_theme (string)* - visual theme of report (Bootstrap)
-	 * \[other\]
+	 * __other__
 		 * *vcf_validation (logical)* - keep/skip VCF validation by [vcf-validator](https://github.com/EBIvariation/vcf-validator)
  * New output file - JSON output of HTML report content
  * New INFO tags of PCGR-annotated VCF
