--- a/pcgrr/inst/templates/pcgr_flexdb/flexdb_scna_other.Rmd
+++ b/pcgrr/inst/templates/pcgr_flexdb/flexdb_scna_other.Rmd
@@ -91,7 +91,8 @@ other_target_variants %>%
                  fixedHeader = T,
                  scrollX = "900px",
                   columnDefs = list(list(width = '90px', targets = c(1,2,3,4,5,6))),
-                               dom = 'Bfrtip'))
+                               dom = 'Bfrtip')) %>%
+  DT::formatStyle("SYMBOL","OPENTARGETS_RANK", color = "white", backgroundColor = DT::styleInterval(pcg_report[['content']][['report_display_config']][['opentargets_rank']][['breaks']], pcg_report[['content']][['report_display_config']][['opentargets_rank']][['colors']]))
 
 ```
 
