--- a/pcgrr/inst/templates/pcgr_rmarkdown/cna_targets_gain.Rmd
+++ b/pcgrr/inst/templates/pcgr_rmarkdown/cna_targets_gain.Rmd
@@ -9,7 +9,9 @@ A total of __`r NROW(pcg_report[['content']][['cna']][["disp"]][['other_target']
 myOptions <- list(pageLength = 10, buttons = c('csv','excel'), dom = "Bfrtip", scrollCollapse = T)
 if(NROW(pcg_report[['content']][['cna']][["disp"]][['other_target']]) > 0){
   DT::datatable(pcg_report[['content']][['cna']][["disp"]][['other_target']], 
-                options = myOptions, escape=F, extensions = "Responsive")
+                options = myOptions, escape=F, extensions = "Responsive") %>%
+  DT::formatStyle("SYMBOL","OPENTARGETS_RANK", color = "white", backgroundColor = DT::styleInterval(pcg_report[['content']][['report_display_config']][['opentargets_rank']][['breaks']], pcg_report[['content']][['report_display_config']][['opentargets_rank']][['colors']]))
+
 }
 ```
 
