--- a/pcgrr/inst/templates/pcgr_rmarkdown/cna_tsgene_loss.Rmd
+++ b/pcgrr/inst/templates/pcgr_rmarkdown/cna_tsgene_loss.Rmd
@@ -7,7 +7,9 @@ A total of __`r NROW(pcg_report[['content']][['cna']][["disp"]][['tsgene_loss']]
 myOptions <- list(pageLength = 10, buttons = c('csv','excel'), dom = "Bfrtip", scrollCollapse = T)
 
 if(NROW(pcg_report[['content']][['cna']][["disp"]][['tsgene_loss']]) > 0){
-  DT::datatable(pcg_report[['content']][['cna']][["disp"]][['tsgene_loss']], options = myOptions, escape=F, extensions = "Responsive")
+  DT::datatable(pcg_report[['content']][['cna']][["disp"]][['tsgene_loss']], options = myOptions, escape=F, extensions = "Responsive") %>%
+  DT::formatStyle("SYMBOL","OPENTARGETS_RANK", color = "white", backgroundColor = DT::styleInterval(pcg_report[['content']][['report_display_config']][['opentargets_rank']][['breaks']], pcg_report[['content']][['report_display_config']][['opentargets_rank']][['colors']]))
+
 }
 ```
 
